2007-09-23  Marek Safar  <marek.safar@gmail.com>
	
	* generics.cs: Fixed lower-bound type inference issue for constructed
	types.
	
	* linq.cs: Implemented nested queries.

2007-09-21  Marek Safar  <marek.safar@gmail.com>
	
	* cs-parser.jay: Query expression block are not related to each other.

2007-09-19  Marek Safar  <marek.safar@gmail.com>
	
	* generic.cs: Fixed type inference for generic delegate arguments whose
	return types are generic delegates.
	
	* linq.cs: Replaced ec.DeclContainer with ec.TypeContainer.
	
2007-09-17  Marek Safar  <marek.safar@gmail.com>
	
	* cs-parser.jay, linq.cs: Implemented query continuation.

2007-09-12  Marek Safar  <marek.safar@gmail.com>
	
	* cs-parser.jay: GroupJoin clause connected.
	
	* generic.cs (TypeInferenceContext.InflateGenericArgument): Uses 
	inferred types to inflate delegate type argument.
	
	* linq.cs: Fixed couple of typos.
	(GroupJoin): Implemented group join clause.
	
2007-09-11  Marek Safar  <marek.safar@gmail.com>
	
	* cs-parser.jay: Single join clause connected.
	
	* linq.cs: Moved argument creation into CreateSelector and renamed to
	CreateSelectorArguments.
	(ARangeVariableQueryClause.BuildQueryClause): Consider all lambda
	arguments to be implicit.
	(Join): Implemented single join clause.
	
2007-09-10  Marek Safar  <marek.safar@gmail.com>
	
	* cs-parser.jay: Create QueryStartClause for the first implicit from.
	
	* generic.cs (TypeInterferenceContext.LowerBoundInference): Fixed crash
	both U and V are not generic.
	
	* linq.cs: Use standard method overload resolution for all methods.
	
2007-09-05  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Plug into let clause.
	
	* linq.cs: Implemented let clause, parameters refactoring.
	
2007-08-31  Marek Safar  <marek.safar@gmail.com>

	* generic.cs (TypeParameter): Uses common Emit.
	(.IsClsComplianceRequired): Is never required.

2007-08-31  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay: Terminates query block correctly. Fixed orderby 